[gd_scene load_steps=8 format=2]

[ext_resource path="res://Modules/GameplayMain.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Modules/Characters/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Modules/UI/Game Interface/Attribute/LaunchBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Modules/Game Utility/Spawner/Spawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://Modules/UI/Game Interface/Score/ScoreUI.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="GameplayMain" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 90, 291 )

[node name="LaunchBar" parent="." instance=ExtResource( 6 )]

[node name="Spawner" parent="." instance=ExtResource( 7 )]

[node name="ScoreUI" parent="." instance=ExtResource( 8 )]

[node name="GameOverTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0
one_shot = true
autostart = true

[node name="SecondTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.0
margin_right = 45.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
